--- a/templates/tasks/task_list.html
+++ b/templates/tasks/task_list.html
@@ -27,10 +27,22 @@
       <div class="col-auto">
         <div class="card mb-4 task-item-container">
           <div class="card-body">
-            <h5 class="card-title"
-                style="height: 5rem">
-              {{ task.name | truncatechars:60 }}
-            </h5>
+            <div class="row">
+              <div class="col-10">
+                <h5 class="card-title"
+                    style="height: 5rem">
+                  {{ task.name | truncatechars:60 }}
+                </h5>
+              </div>
+              <div class="col-2">
+                <form class="is_completed_form" action="" method="POST">
+                  {% csrf_token %}
+                  {{ task.is_completed_form|crispy }}
+                  <input type="hidden" name="is_completed_form">
+                </form>
+              </div>
+            </div>
+
             <p
                 class="card-subtitle mb-2"
                 style="height: 1rem">
@@ -49,4 +61,15 @@
       </div>
     {% endfor %}
   </div>
+{% endblock %}
+{% block scripts %}
+  <script>
+      for (const isCompletedForm of document.getElementsByClassName("is_completed_form")) {
+          isCompletedForm
+              .getElementsByTagName("input")["is_completed"]
+              .addEventListener("change", () => {
+                  isCompletedForm.submit()
+              })
+      }
+  </script>
 {% endblock %}
